[gd_scene load_steps=6 format=3 uid="uid://ym4720jp3pk7"]

[ext_resource type="Script" path="res://src/game_over_menu.gd" id="1_bbhee"]
[ext_resource type="FontFile" uid="uid://bqr0owxrarvky" path="res://assets/fonts/MaldiniBold.ttf" id="1_qh0qe"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6lgkn"]
bg_color = Color(0.152941, 0.333333, 0.568627, 1)
shadow_size = 5
shadow_offset = Vector2(5, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8kd6o"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0705882, 0.266667, 0.435294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8vm6h"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
bg_color = Color(0.0705882, 0.266667, 0.435294, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[node name="GameOverMenu" type="CanvasLayer"]
script = ExtResource("1_bbhee")

[node name="GameOverPanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6lgkn")

[node name="GameOverLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 32.0
offset_bottom = 55.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.968627, 0.972549, 0.976471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qh0qe")
theme_override_font_sizes/font_size = 40
text = "Game Over!
Your Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -98.0
offset_top = -44.0
offset_right = 99.0
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.968627, 0.972549, 0.976471, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_qh0qe")
theme_override_font_sizes/font_size = 40
text = "000000
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -160.0
offset_right = 125.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_fonts/font = ExtResource("1_qh0qe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8kd6o")
theme_override_styles/hover = SubResource("StyleBoxFlat_8kd6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8kd6o")
text = "New Game"

[node name="QuitButton" type="Button" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -110.0
offset_top = -87.0
offset_right = 125.0
offset_bottom = -27.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.956863, 0.956863, 0.956863, 1)
theme_override_fonts/font = ExtResource("1_qh0qe")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_8vm6h")
theme_override_styles/hover = SubResource("StyleBoxFlat_8kd6o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8kd6o")
text = "Quit Game"

[connection signal="pressed" from="GameOverPanel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOverPanel/QuitButton" to="." method="_on_quit_button_pressed"]
